# ipa_pars

./: .gitignore  IDE_readme.md  README.md  packages
.ros/: latest  rospack_cache_00307127623461651955  rospack_cache_12658081985009298573  rosstack_cache_00307127623461651955
.ros/ipa_pars/knowledge/: dynamic-knowledge-base.yaml
.ros/log/: latest
adp_planner/: CMakeLists.txt  Makefile.tarball  Readme.md  info_for_build  package.xml
adp_planner/common/scripts/: fast-downward.bash  preprocess.bash
adp_planner/scripts/: fast-downward.bash  preprocess.bash  translate.bash
execution_demo/: CMakeLists.txt  package.xml
execution_demo/src/: planning_execution.py
ext_planner/: CMakeLists.txt  COPYING  package.xml
ext_planner/adp/: buil_all_and_move  build_all_understandable
ext_planner/adp/driver/: portfolio_runner.py
ext_planner/adp/preprocess/: Makefile  preprocess
ext_planner/adp/search/: Makefile.depend  adp_relaxation_heuristic.cc
ext_planner/adp/translate/: axiom_rules.py  build_model.py  constraints.py  graph.py  greedy_join.py  instantiate.py  invariants.py  (+8 more)
ipa_pars/: CHANGELOG.rst  CMakeLists.txt  package.xml
ipa_pars_main/: CMakeLists.txt  package.xml
ipa_pars_main/action/: KnowledgeParser.action  LogicPlan.action  PlanExecutor.action  PlanSimulator.action  PlanSolver.action
ipa_pars_main/examples/: domain.pddl  problem.pddl
ipa_pars_main/execution_tests/: knowledge-base-static.yaml  problem.pddl  sas_plan-test-01
ipa_pars_main/knowledge/: action-knowledge-01.yaml  knowledge-base-dynamic-test-01.yaml
ipa_pars_main/launch/: bringup_planning_environment.launch  planning_executor.launch  planning_server.launch  test_knowledge_parser.launch  test_planning_executor.launch  test_planning_solver.launch
ipa_pars_main/maps/: lab_ipa.xcf
ipa_pars_main/scripts/: eraseboxes.bash  fast-downward.bash  preprocess.bash  spawn-fac-boxes.launch  the-box-2.sdf  the-box-3.sdf  the-box-4.sdf  the-box-5.sdf  translate.bash
ipa_pars_main/src/: knowledge_parser_client.py  knowledge_parser_server.py  planning_client.py  planning_controller.py  planning_domain.py  planning_execution.py  planning_executor_client.py  planning_executor_server.py  planning_executor_simulator.py  planning_problem.py  planning_server.py  planning_solver.py  planning_solver_client.py  planning_solver_server.py
ipa_pars_main/srv/: PlanData.srv
ipa_pars_main/tmp/: domain.pddl  domain.pddl.orig  planner-log.txt  problem.pddl  room-transitions
ipa_pars_main/yaml/: move-robo-to.yaml
ipa_pars_map_analyzer/: CMakeLists.txt  package.xml
ipa_pars_map_analyzer/action/: ParsMapKnowledge.action  ParsMapTesselation.action
ipa_pars_map_analyzer/include/ipa_pars_map_analyzer/: ipa_pars_map_analyzer_client.h
ipa_pars_map_analyzer/msg/: SquareInformation.msg
ipa_pars_map_analyzer/ros/include/ipa_pars_map_analyzer/: ipa_pars_map_analyzer_server.h  ipa_pars_map_knowledge_extractor_server.h  ipa_pars_map_tesselation_server.h
ipa_pars_map_analyzer/ros/launch/: ipa_pars_map_analyzer_client.launch  ipa_pars_map_analyzer_demo.launch  ipa_pars_map_analyzer_server_params.yaml
ipa_pars_map_analyzer/ros/src/: cv_test_file.cpp  cv_test_file2.cpp  cv_test_file3.cpp  ipa_map_analyzer_node.cpp  ipa_pars_map_analyzer.cpp  ipa_pars_map_analyzer_client.cpp  ipa_pars_map_analyzer_server.cpp  ipa_pars_map_knowledge_extractor_server.cpp  ipa_pars_map_tesselation_server.cpp  knowledge_extractor_server.py  knowledge_to_yaml.py
ipa_pars_map_analyzer/src/: ipa_pars_map_analyzer_client.cpp  ipa_pars_map_analyzer_client_node.cpp
knowledge_base/: CMakeLists.txt  package.xml
knowledge_base/content/: knowledge-base-backup.yaml  knowledge-base-template.yaml  knowledge-base.yaml
knowledge_base/msg/: RoomInfo.msg
knowledge_base/src/: function_tests2.py  knowledge_base_server.py
knowledge_base/srv/: MapSeg.srv
map_analyzer/: CMakeLists.txt  package.xml
map_analyzer/action/: MapAnalyzer.action  MapKnowledge.action  MapTesselation.action  ParsMapAnalyzer.action  ParsMapKnowledge.action  ParsMapTesselation.action
map_analyzer/common/files/test_maps/: lab_ipa4.yaml
map_analyzer/knowledge/: static-knowledge-base-onlyrooms.yaml  static-knowledge-base.yaml  static-knowledge-base0-justrooms.yaml  static-knowledge-base0.yaml
map_analyzer/launch/: map_analyzer_demo.launch
map_analyzer/maps/backup0815/: lab_ipa3.xcf
map_analyzer/maps/backup1-good/: static-knowledge-base.yaml
map_analyzer/maps/bestforgood1/: static-knowledge-base0.yaml
map_analyzer/msg/: RoomBalancePoints.msg
map_analyzer/ros/include/: README.md
map_analyzer/ros/include/map_analyzer/: map_analyzer_server.h  map_knowledge_extractor_server.h  map_tesselation.h
map_analyzer/ros/launch/: ipa_pars_map_analyzer_client.launch  ipa_pars_map_analyzer_server.launch  map_analyzer_client.launch  map_analyzer_params.yaml  map_analyzer_server.launch
map_analyzer/ros/src/: knowledge_to_yaml.py  map_analyzer_client.cpp  map_analyzer_server.cpp  map_knowledge_extractor_server.cpp  map_tesselation_server.cpp
map_analyzer/scripts/: text_to_map.py
map_analyzer/src/: color_utils_cme.py  function_tests.py  knowledge_extractor_server.py  map_analyzer.py  map_analyzer_client.py  map_analyzer_server.py  map_publisher.py  map_status_logger.py  map_tesselation.py  map_tesselation_server.py
map_analyzer/srv/: KnowledgeToYaml.srv  MapAnalyzer.srv  MapLogger.srv  RoomTesselation.srv
planning_demo/: CMakeLists.txt  package.xml  planning_demo.bash  respawnrobot32  the-box-1.sdf
planning_demo/common/: ipa-apartment-square-numbers-with-boxes.xcf  static-knowledge-base-edited.yaml  static-knowledge-base.yaml
planning_demo/configs/: demo_rviz.rviz
planning_demo/launch/: function_tests.launch  planning_demo.launch  rviz.launch
planning_demo/scripts/: erase_box1.bash  erase_box5.bash  eraseboxes.bash  gazebo.material  move_robo_init.py  spawn-fac-boxes.launch  spawn-fac-colored-boxes.launch  the-box.sdf
planning_demo/src/: execution_demo.py  planning_demo.py
use_cases/: CMakeLists.txt  package.xml
use_cases/scripts/: scenario-1-fetchcarry
(+52 files in other folders)
