<package>
  <name>ipa_pars</name>
  <version>0.1.0</version>
  <description>The ipa_pars stack includes packages that provide action planning to the Care-O-bot system through ROS actions using the ADP logic planner and PDDL standard.</description>


  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/ipa_pars</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="rmb@ipa.fhg.de">Richard Bormann</maintainer>
  <author email="rmbce@ipa.fhg.de">Christian Ehrmann</author>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>adp_planner</run_depend>
  <run_depend>ipa_pars_main</run_depend>
  <run_depend>ipa_pars_map_analyzer</run_depend>
  <run_depend>ipa_pars_demo</run_depend>
  <export>
    <metapackage/>
  </export>
</package>
