<package format="2">
  <name>ipa_pars_map_analyzer</name>
  <version>0.0.1</version>
  <description>The ipa_pars_map_analyzer package</description>

  <author email="rmbce@ipa.fhg.de">Christian Ehrmann</author>
  <maintainer email="rmbce@ipa.fhg.de">Christian Ehrmann</maintainer>
  <maintainer email="rmb@ipa.fhg.de">Richard Bormann</maintainer>

<!-- <url type="website">http://wiki.ros.org/ipa_pars_map_analyzer</url> -->
  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>boost</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

</package>
