<?xml version="1.0"?>
<package format="2">
  <name>ipa_pars_map_analyzer</name>
  <version>0.1.0</version>
  <description>The ipa_pars_map_analyzer package</description>

  <author email="rmbce@ipa.fhg.de">Christian Ehrmann</author>
  <maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>

<!-- <url type="website">http://wiki.ros.org/ipa_pars_map_analyzer</url> -->
  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>boost</depend>
  <depend>cmake_modules</depend>
  <depend>cv_bridge</depend>
  <depend>genmsg</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

</package>
